# QPRA-LLM-0.8B

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
model/: README.md
src/: config.rs  convert.rs  gemv.rs  generate.rs  lib.rs  main.rs  save.rs  simd.rs  system.rs  tokenizer.rs  vision.rs
