[package]
name = "qor08b"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qor08b"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"

[dependencies]
cortex = { git = "https://github.com/qora-protocol/cortex", features = ["ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
half = "2"
rayon = "1"
memmap2 = "0.9"
image = "0.25"
